<resources>
    <string name="app_name">My collection</string>
    <string name="image">image</string>
    <string name="add_new_category">Category</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="circulation_time">Circulation time</string>
    <string name="add_new_banknote">%s</string>
    <string name="description">Description</string>
    <string name="obverse">obverse</string>
    <string name="reverse">reverse</string>
    <string name="delete_country">%s will be deleted!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="delete_country_info">Content of this category will also be deleted!</string>
    <string name="no_description">no description</string>
    <string name="country_name_error">Invalid name</string>
    <string name="country_s">Country: %s</string>
    <string name="circulation_time_s">Circulation time: %s</string>
    <string name="description_s">Description: %s</string>
    <string name="delete">Delete</string>
    <string name="delete_banknote">Delete %s?</string>
    <string name="yes">YES</string>
    <string name="update_banknote">Editing</string>
    <string name="update">Update</string>
    <string name="no_items">There are no items here yet\nTap the button to add some</string>
    <string name="settings">Settings</string>
    <string name="db_exported">Database was exported to \"Exported Databases\" folder</string>
    <string name="db_invalid">Database file should have \".db\" extension</string>
    <string name="version">Version %s</string>
    <string name="category">Category name</string>
    <string name="select_add">Select what to add</string>
    <string name="banknote">%s</string>
    <string name="country">Country</string>
    <string name="categoryName">Category</string>
    <string name="rw_permission_denied">To export/import databases and add images, enable read/write permissions!</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="db_folder_already_exists">Database folder already exists. Try to do export again</string>
    <string name="swap">Swap the items</string>
    <string name="enable_bigger_text">Bigger text size</string>
    <string name="export_db">Export database</string>
    <string name="import_db">Import database</string>
    <string name="db_cat_preference">Database</string>
    <string name="interface_cat_preference">Interface</string>
    <string name="banknote_name_error">Invalid name</string>
    <string name="need_icon">Add icon</string>
    <string name="other_cat_preference">Other</string>
    <string name="help_title">Help</string>
    <string name="backup_db">Backup database on every screen</string>
    <string name="backup_db_summary">Affects performance</string>
    <string name="db_backup_failed">Backup failed</string>
    <string name="enable_bigger_icons">Bigger icons</string>
    <string name="pick_action">Select an action</string>
    <string name="delete_category_action">Delete</string>
    <string name="edit_category_action">Edit</string>
    <string name="update_category">Update category</string>
    <string name="rotate_vertical_image">Rotate vertical images in list</string>
    <string name="a_of_b" translatable="false">%d/%d</string>
    <string name="export_in_progress">Exporting database…</string>
    <string name="export_in_progress_subtitle">Do not pause or close the application until export ends</string>
    <string name="import_in_progress">Importing database…</string>
    <string name="import_in_progress_subtitle">Do not pause or close the application until import ends</string>
    <string name="search">Search</string>
    <string name="empty_search_string">Enter the text to search</string>
    <string name="search_in_name">Search in name</string>
    <string name="search_in_description">Search in description</string>
    <string name="move">Move</string>
    <string name="cancel">Cancel</string>
    <string name="item_name_title">What will be stored in collection?</string>
    <string name="default_item_name">Banknote</string>
    <string name="change_item_name">Change items\' name</string>
    <string name="current_item_name">Current: %s</string>
    <string name="show_status_bar">Show status bar</string>
    <string name="restart_status_bar">Restart application to apply changes</string>
    <string name="top_dir">Internal storage</string>
</resources>
